# jlogin

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  USE_IN_CLAUDE_CODE.md  notion-config.json  pyproject.toml
.claude/: settings.json
assets/: roue_base12_glyphes.js  sceau_cs9_loop.js
context/: CONTEXT.md  HISTORY.md
mathart/: __init__.py  _svg.py  aigen.py  canvas.py  cli.py  intensity.py  plot.py  primitives.py  render.py  sacred.py  shapes.py  stencil.py  trace.py  validate_work.py
reports/: routine-2026-06-15T13-00.md  routine-2026-06-16T02-33.md  routine-2026-06-16T13-03.md  routine-2026-06-17T02-44.md  routine-2026-06-17T13-15.md  routine-2026-06-18T02-33.md  routine-2026-06-18T13-22.md  routine-2026-06-19T02-32.md  routine-2026-06-19T13-05.md  routine-2026-06-20T13-00.md  routine-2026-06-21T00-00.md  routine-2026-06-21T13-03.md  routine-2026-06-22T02-32.md  routine-2026-06-22T13-00.md  routine-2026-06-23T13-00.md  routine-2026-06-23T13-03.md  routine-2026-06-24T00-00.md  routine-2026-06-24T13-02.md  routine-2026-06-25T02-32.md  routine-2026-06-25T13-09.md  routine-2026-06-26T13-00.md  routine-2026-06-27T13-00.md  routine-2026-06-27T13-02.md  routine-2026-06-28T02-34.md  routine-2026-06-28T13-00.md  routine-2026-06-29T02-33.md  routine-2026-07-01T02-33.md  routine-2026-07-01T13-02.md  routine-2026-07-02T13-00.md  routine-2026-07-02T13-01.md  routine-2026-07-03T13-00.md  routine-2026-07-03T13-01.md  routine-2026-07-04T13-00.md  routine-2026-07-04T14-00.md  routine-2026-07-05T02-33.md  routine-2026-07-05T13-00.md  routine-2026-07-06T02-33.md  (+34 more)
(+41 files in other folders)
