[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mathart"
version = "0.1.0"
description = "Formula-driven generative art engine (Yeganeh-style mathematical paintings)"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pillow>=9.0"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mathart = "mathart.cli:main"

[tool.setuptools.packages.find]
include = ["mathart*"]
